--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -4,6 +4,17 @@
     padding-right: 20px;
 }
 
+.participantsContainer {
+	height: 45px;
+}
+
 .toastError {
 	background-color: #d50000 !important;
+}
+
+li {
+	font-size: 1.5em;
+	text-align: center;
+	height: 40px;
+	line-height: 40px !important;
 }
