add more test, fix display of result, add warning dialog, remove unused files

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -12,6 +12,11 @@
 	background-color: #d50000 !important;
 }
 
+.toastWarning {
+	background-color: #ffeb3b !important;
+	color: black !important;
+}
+
 li {
 	font-size: 1.5em;
 	text-align: center;
